代码生成器2.0  自定义配置

--- a/src/main/resources/templates/column.html
+++ b/src/main/resources/templates/column.html
@@ -13,10 +13,12 @@
         th, td {
             text-align: center;
         }
-        .letter-space-zero-5{
+
+        .letter-space-zero-5 {
             letter-spacing: .5em;
         }
-        input[type="text"]{
+
+        input[type="text"] {
             letter-spacing: 1px;
         }
     </style>
@@ -59,7 +61,9 @@
 
     <div class="row my-5">
         <div class="col-6">
-            <button class="btn btn-info btn-block" id="configBtn" type="button" data-toggle="collapse" data-target="#configContainer" aria-expanded="false" aria-controls="collapseExample">配置基本信息</button>
+            <button class="btn btn-info btn-block" id="configBtn" type="button" data-toggle="collapse"
+                    data-target="#configContainer" aria-expanded="false" aria-controls="collapseExample">配置基本信息
+            </button>
         </div>
         <div class="col-6">
             <button class="btn btn-outline-danger text-warning btn-block" onclick="generateCode(this)">生成代码预览</button>
@@ -72,49 +76,55 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text letter-space-zero-5">包名</span>
                     </div>
-                    <input type="text" class="form-control col-form-label-lg font-weight-bold" name="packageName" placeholder="请输入包名，例 cn.okjava.bennycodegenerator.generator.note">
+                    <input type="text" class="form-control col-form-label-lg font-weight-bold" name="packageName"
+                           placeholder="请输入包名，例 cn.okjava.bennycodegenerator.generator.note">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text letter-space-zero-5">作者</span>
                     </div>
-                    <input type="text" class="form-control font-weight-bold col-form-label-lg" name="author" placeholder="请输入作者">
+                    <input type="text" class="form-control font-weight-bold col-form-label-lg" name="author"
+                           placeholder="请输入作者">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text letter-space-zero-5">版本</span>
                     </div>
-                    <input type="text" class="form-control font-weight-bold col-form-label-lg" name="version" placeholder="请输入版本">
+                    <input type="text" class="form-control font-weight-bold col-form-label-lg" name="version"
+                           placeholder="请输入版本">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text letter-space-zero-5">输出目录</span>
                     </div>
-                    <input type="text" class="form-control font-weight-bold col-form-label-lg" name="outputDir" placeholder="请输入输出目录文件夹">
+                    <input type="text" class="form-control font-weight-bold col-form-label-lg" name="outputDir"
+                           placeholder="请输入输出目录文件夹">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text">表前缀</span>
                     </div>
-                    <input type="text" class="form-control font-weight-bold col-form-label-lg" name="tablePrefix" placeholder="请输入表前缀，使用 + 逗号分隔">
+                    <input type="text" class="form-control font-weight-bold col-form-label-lg" name="tablePrefix"
+                           placeholder="请输入表前缀，使用 + 逗号分隔">
                 </div>
-               <div class="input-group mb-3">
+                <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text">实体后缀</span>
                     </div>
-                    <input type="text" class="form-control font-weight-bold col-form-label-lg" name="entitySuffix" placeholder="请输入实体后缀">
+                    <input type="text" class="form-control font-weight-bold col-form-label-lg" name="entitySuffix"
+                           placeholder="请输入实体后缀">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text">开启Lombok</span>
                     </div>
                     <select class="form-control font-weight-bold col-form-label" name="lombokFlag">
-                        <option value="true" selected>开启</option>
+                        <option value="true">开启</option>
                         <option value="false">关闭</option>
                     </select>
                 </div>
                 <div class="input-group mb-3">
-                   <button class="btn btn-block btn-success" onclick="confirmSetConfig()">保存配置</button>
+                    <button class="btn btn-block btn-success" onclick="confirmSetConfig()">保存配置</button>
                 </div>
             </div>
         </div>
@@ -159,22 +169,28 @@
         // 代码高亮
         hljs.initHighlightingOnLoad();
     });
+
     // 初始化配置
-    function initConfig(){
+    function initConfig() {
         let configObj = localStorage.getItem('generatorConfig');
         if (configObj) {
-            configObj=JSON.parse(configObj);
-            $.each(configObj,function(k,v){
-                $('input[name="' + k + '"]').val(v);
+            configObj = JSON.parse(configObj);
+            $.each(configObj, function (k, v) {
+                if (k === 'lombokFlag') {
+                    $('select[name="' + k + '"]').val(v);
+                } else {
+                    $('input[name="' + k + '"]').val(v);
+                }
             })
         }
     }
+
     initConfig();
 
-    function checkConfig(){
+    function checkConfig() {
         const configFrms = $('#configContainer').find('input[type="text"]');
-        let checkFlag = $.each(configFrms,function (idx, ele) {
-            if(!$(ele)){
+        let checkFlag = $.each(configFrms, function (idx, ele) {
+            if (!$(ele)) {
                 return false;
             }
         });
@@ -183,11 +199,12 @@
         }
     }
 
-    function confirmSetConfig(){
+    function confirmSetConfig() {
         checkConfig();
         const configFrms = $('#configContainer').find('input[type="text"]');
-        var params = {};
-        $.each(configFrms,function (idx, ele) {
+        var params = {'lombokFlag': $('select[name="lombokFlag"]').val()};
+
+        $.each(configFrms, function (idx, ele) {
             let value = $(ele).val();
             let name = $(ele).attr('name');
             params[name] = value;
@@ -198,7 +215,7 @@
             method: "post",
             data: params,
             success: function (result) {
-                if(!result){
+                if (!result) {
                     $('#configBtn').click()
                     alert('配置添加成功');
                     return;
@@ -222,9 +239,10 @@
     };
 
     let temp = `<div class="col-2"> <div class="card"> <div class="card-header text-center font-weight-bold">{{0}}</div> <div class="card-body text-center"> <button onclick="preview('{{0}}')" class="btn btn-primary m-auto">预览</button> </div> </div></div>`
-    function generatePreviewBtn(){
+
+    function generatePreviewBtn() {
         checkConfig();
-        const rowPrefix  = `<div class="row my-5">`
+        const rowPrefix = `<div class="row my-5">`
         const rowSuffix = `</div>`
         var result = '';
         Object.keys(previewObj).forEach((value, index) => {
@@ -240,6 +258,7 @@
         });
         $('#previewContainer').html(result);
     }
+
     generatePreviewBtn()
 
     /**
@@ -318,7 +337,7 @@
         var jquerySpecialChars = ["<", ">"];
         for (var i = 0; i < jquerySpecialChars.length; i++) {
             // escapseResult = escapseResult.replace(new RegExp(jquerySpecialChars[i], "g"), "\\" + jquerySpecialChars[i]);
-            escapseResult = escapseResult.replace(new RegExp('>', "g"),'&gt;');
+            escapseResult = escapseResult.replace(new RegExp('>', "g"), '&gt;');
             escapseResult = escapseResult.replace(new RegExp('<', "g"), '&lt;');
         }
         return escapseResult;
