代码生成器2.0  自定义配置

--- a/src/main/resources/templates/column.html
+++ b/src/main/resources/templates/column.html
@@ -292,6 +292,7 @@
                 that.addClass("bg-success");
                 that.addClass("text-white");
                 that.text('重新生成');
+                alert('生成成功')
             }
         });
     }
