代码生成器2.0  自定义配置

--- a/src/main/resources/templates/column.html
+++ b/src/main/resources/templates/column.html
@@ -60,15 +60,18 @@
     </div>
 
     <div class="row my-5">
-        <div class="col-6">
+        <div class="col-4">
             <button class="btn btn-info btn-block" id="configBtn" type="button" data-toggle="collapse"
                     data-target="#configContainer" aria-expanded="false" aria-controls="collapseExample">配置基本信息
             </button>
         </div>
-        <div class="col-6">
+        <div class="col-4">
             <button class="btn btn-outline-danger text-warning btn-block" onclick="generateCode(this)">生成代码预览</button>
             <input type="hidden" id="previewUrl" th:value="@{/generate(tableName=${tableName})}">
             <input type="hidden" id="saveConfigUrl" th:value="@{/save}">
+        </div>
+        <div class="col-4">
+            <button class="btn btn-outline-danger text-warning btn-block" onclick="download()">一键下载</button>
         </div>
         <div class="col-12 pt-3">
             <div class="collapse" id="configContainer">
@@ -199,6 +202,9 @@
         }
     }
 
+    /**
+     * 保存配置项
+     */
     function confirmSetConfig() {
         checkConfig();
         const configFrms = $('#configContainer').find('input[type="text"]');
